kustomization/components/networkpolicy-allow-traefik/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: web # You may need to replace this!
  podSelector: {} # You probably do not want to match all pods!
  policyTypes:
    - Ingress
